some styling and bug fixing on collapse

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -26,7 +26,7 @@ h6 {
   font-weight: 600 !important;
 }
 
-body {
+p {
   font-family: 'Noto Sans TC', sans-serif !important;
   font-weight: 200 !important;
   line-height: 2 !important;
